# VECINA-podcast-transcription

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
_data/: config.json
docs/llm_generated/: HALLUCINATION_FIX.md  QUICKSTART.md  RETRY_FEATURE.md
scripts/: clean_transcription.py  download_from_modal.py  example_usage.py  retry_demo.py  run_transcription_pipeline.ps1  run_transcription_pipeline.sh  upload_to_modal.py
test/: test_hallucination_filtering.py  test_transcriber.py
vecina_transcriber/: __init__.py  __main__.py  cli.py  modal_entrypoint.py  transcriber.py
